Fix: Cut off text in Firefox I'll

--- a/app/assets/stylesheets/newflow_layout.scss
+++ b/app/assets/stylesheets/newflow_layout.scss
@@ -485,7 +485,7 @@ input.has-error {
     }
 
     [type=submit] {
-        width: 17.2rem;
+        min-width: 17.2rem;
     }
 
     [type=checkbox] {
